<resources>
    <string name="app_name">IMC</string>
    <string name="about">About</string>
    <string name="age">Age</string>
    <string name="delete">Delete</string>
    <string name="height">Height (cm)</string>
    <string name="view">View All</string>
    <string name="submit">Submit</string>
    <string name="weight">Weight (Kg)</string>
    <string name="date">Date (year-month-day):</string>
    <string name="version">BETA 0.01</string>
    <string name="developer">This app was developed by Filipe Santos</string>
    <string name="date1">Date</string>
    <string name="height1">Height</string>
    <string name="weight1">Weight</string>
    <string name="imc">IMC</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="signUp">Sign Up</string>
    <string name="tableIMC">Table IMC</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dataUser">User data</string>
    <string name="none">Null</string>
    <string name="current">Current</string>

    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="emailClient">Choose an email client:</string>

    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

</resources>
