<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ViewData">

    <include
        android:id="@+id/topBar"
        layout="@layout/main_top_bar">
    </include>

    <ListView
        android:id="@+id/data"
        android:layout_width="406dp"
        android:layout_height="556dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintVertical_bias="1.0"></ListView>

    <TextView
        android:id="@+id/imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/imc"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/data"
        app:layout_constraintStart_toEndOf="@+id/weight" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/weight1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/data"
        app:layout_constraintStart_toEndOf="@+id/height" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/height1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/data"
        app:layout_constraintStart_toEndOf="@+id/age" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:text="@string/age"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/height"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/date1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/data"
        app:layout_constraintEnd_toEndOf="@+id/age"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/data" />

</androidx.constraintlayout.widget.ConstraintLayout>