<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <include
        android:id="@+id/topBar"
        layout="@layout/main_top_bar"
        android:background="@color/darkGray"
        app:popupTheme="@style/TopBarPopup">
    </include>

    <Button
        android:id="@+id/btViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="64dp"
        android:text="@string/view"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btSubmit"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btViewAll"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000"
        android:textColorHint="#000"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="248dp"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000"
        android:textColorHint="#000"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="13dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editWeight"
        app:layout_constraintTop_toBottomOf="@+id/editHeight" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="13dp"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editAge"
        app:layout_constraintStart_toStartOf="@+id/editAge" />

</androidx.constraintlayout.widget.ConstraintLayout>